# ametdata-py

./: .gitignore  CHANGELOG.md  MANIFEST.in  README.md  pyproject.toml
aemetdata/: README.md  __init__.py  aemet_client.py  cli.py
aemetdata/avisos/: __init__.py
aemetdata/climatologia/: __init__.py
aemetdata/utils/: suport_functions.py
tests/: demo_functions.ipynb  test_cli.py
