[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "aemetdata"
version = "0.1.0"
description = "Paquete Python para descargar datos de AEMET OpenData"
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [
  { name = "Carlos Pacheco Perelló", email = "cpacheco.perello@outlook.com" }
]
dependencies = [
  "httpx>=0.24",
  "requests>=2.31",
  "python-dateutil>=2.8"
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Software Development :: Libraries",
  "Topic :: Utilities"
]
keywords = ["aemet", "opendata", "meteorologia"]

[project.urls]
Homepage = "https://github.com/cpacheco-perello"
Repository = "https://github.com/cpacheco-perello/ametdata-py"
Issues = "https://github.com/cpacheco-perello/ametdata-py/issueses"

[project.optional-dependencies]
test = [
  "pytest>=7.0",
  "pytest-asyncio>=0.21",
  "pytest-cov>=4.0"
]

[project.scripts]
aemetdata = "aemetdata.cli:main"

[tool.setuptools.packages.find]
include = ["aemetdata*"]
